input align correct by css

--- a/style.css
+++ b/style.css
@@ -78,9 +78,14 @@ h4{
     display: none;
 }
 
+.align-input{
+ margin-right: -20px;
+}
 
 
-@media (max-width:600px) {
+
+
+@media (max-width:700px) {
 
     .section-img{
         width: 100%;
@@ -92,6 +97,11 @@ h4{
         width: 100%;
          
     }
+
+    .align-input{
+        margin-right:-11px;
+       }
+       
     
 
 }
